rust_writer_procedural/tests/ui/parse_attrs_fails_if_attrs_not_separated_by_commas.stderr
error: expected `,`
 --> tests/ui/parse_attrs_fails_if_attrs_not_separated_by_commas.rs:5:58
  |
5 | #[mutator(rust_writer::ast::implementors::ItemToTrait<'a>; local = A)]
  |                                                          ^
